[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchflow"
version = "0.5.0"
description = "A lightweight Python framework for readable multi-agent pipelines."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Abhinandan" }
]
keywords = ["agents", "ai", "workflow", "orchestration", "pipelines"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
litellm = [
  "litellm>=1.83.0,<2",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "pyright>=1.1",
]

[project.urls]
Homepage = "https://github.com/awesome-pro/orchflow"
Issues = "https://github.com/awesome-pro/orchflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/orchflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pyright]
include = ["src", "tests", "examples"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportMissingTypeStubs = false
